[package]
name = "sorted-insert"
version = "0.2.4"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/magiclen/sorted-insert"
homepage = "https://magiclen.org/sorted-insert"
keywords = ["sort", "insert", "vec", "array", "insertion"]
categories = ["no-std", "algorithms"]
description = "This crate provides traits to insert elements to a sorted collection and keep the order."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]

[features]
default = ["std"]
std = []
